# ctronome

./: .gitignore  CMakeLists.txt  CMakePresets.json  README  README.md  TODO  ctronome.h  dsp.c  routines.h
cmake/: .gitignore  generate_git_version_header.cmake  git_version.h.in
docs/: changelog.md  changelog.txt  important_notes.md  important_notes.txt  known_issues.md  known_issues.txt  prog_example.txt
src/: .gitignore  Makefile  arguments.c  arguments.h  audio_output_adapter.c  audio_output_adapter.h  ctronome.c  ctronome.h  defaults.c  defaults.h  dsp.c  dsp.h  logging_adapter.c  logging_adapter.h  program_file_adapter.c  program_file_adapter.h  routines.c  routines.h
src/audio_adapters/: dsp_adapter.c  dsp_adapter.h  pulseaudio_adapter.c  pulseaudio_adapter.h
